	Update NSAssert() and NSCAssert() to handle variable arguments
	(as OSX has done) and mark the numbered macros as obsolete.
	* Source/NSMessagePort.m:
	* Source/NSSocketPort.m: Log if we fail to turn on keepalive
	* Source/NSURL.m: fix possible nul pointer dereference
	* Source/NSPropertyList.m: check step before use
	* Source/NSDate.m: add comment that we are ignoring non-digits

2018-02-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPortCoder.m: Remove redundant (always true) conditional.
	Use cast to mask 64bit values.
	* Source/NSUnarchiver.m: Remove redundant (always true) conditional.
	* Source/NSPropertyList.m: Remove dead code
	* Source/NSDecimal.m: Remove dead code, tweak underflow settig for
	negated numbbers.
	* Tools/gdnc.m: Remove dead code

2018-02-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFileHandle.m: keep checker happy by usingn return value of
	setsockopt.
	* Source/Additions/Unicode.m: ensure iconv handle is closed
	* Source/NSLocale.m: localeIdentifierFromComponents should cope with
	collation alone beng set.
	* Source/GSString.m: better handling if character conversion fails.
	* Source/NSRunLoop.m: suppress warning using cast.
	* Source/NSTimeZone.m: check that time zone hour is in range 0 to 23

2018-02-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFTPURLHandle.m: change memcpy to memmove to avoid possible
	problems with overlapping source and destination areas.
	* Source/Additions/Unicode.m: ensure iconv handle is closed
	* Source/NSXMLParser.m: fix incorrect type assignment

2018-02-01  Fred Kiefer <fredkiefer@gmx.de>

	* Source/GSFormat.m: Call va_end with the correct parameter.
	* Source/NSObject+NSComparisonMethods.m: Add missing return.
	* Source/GSString.m (-replaceCharactersInRange:withString:,
	-initWithBytesNoCopy:...freeWhenDone:): Remove dead code.
	* Source/NSDistantObject.m (-initWithCoder:): Remove dead code.
	* Source/NSPredicate.m (_eval_avg:): Don't devide by zero.
	Fix issues found by Coverity.