@@ -10,6 +10,7 @@
 	* Source/NSURL.m: fix possible nul pointer dereference
 	* Source/NSPropertyList.m: check step before use
 	* Source/NSDate.m: add comment that we are ignoring non-digits
+	* Source/NSCache.m: use double division for calcualting averrage
 
 2018-02-05  Richard Frith-Macdonald <rfm@gnu.org>
 
